--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^1.4.0",
     "lowdb": "^7.0.1",
     "next": "15.3.3",
     "react": "^19.0.0",
